// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with a value 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="ControlledInput"
    class="ControlledInput"
    data-test-id="cf-ui-controlled-input"
    id="ControlledInput"
    type="checkbox"
    value="someValue"
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  />
</div>
`;

exports[`renders the component with all required props 1`] = `
<div
  class="Checkbox"
>
  <input
    aria-label="ControlledInput"
    class="ControlledInput"
    data-test-id="cf-ui-controlled-input"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="ControlledInput"
    class="ControlledInput"
    data-test-id="cf-ui-controlled-input"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  />
</div>
`;

exports[`renders the component with as checked 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="ControlledInput"
    checked=""
    class="ControlledInput"
    data-test-id="cf-ui-controlled-input"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  >
    <svg
      class="Icon Icon--medium Icon--white"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with disabled prop 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="ControlledInput"
    class="ControlledInput ControlledInput--disabled"
    data-test-id="cf-ui-controlled-input"
    disabled=""
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  />
</div>
`;

exports[`renders the component with required prop 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="ControlledInput"
    class="ControlledInput"
    data-test-id="cf-ui-controlled-input"
    id="ControlledInput"
    required=""
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
    for="ControlledInput"
  />
</div>
`;
